[package]
name = "pallet-nomination-pools"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME nomination pools pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# parity
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# FRAME
frame-support = { version = "36.0.0", default-features = false, features = ["tuples-96"] }
frame-system = { version = "36.1.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-staking = { version = "33.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }

# Optional: use for testing and/or fuzzing
pallet-balances = { version = "37.0.0", default-features = false, optional = true }
sp-tracing = { version = "10.0.0", path = "../../primitives/tracing", optional = true }

[dev-dependencies]
pallet-balances = { version = "37.0.0", default-features = false }
sp-tracing = { version = "10.0.0", path = "../../primitives/tracing" }

[features]
default = ["std"]
fuzzing = ["pallet-balances", "sp-tracing"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"sp-staking/std",
	"sp-core/std",
	"log/std",
]
runtime-benchmarks = [
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime"
]
