[package]
name = "pallet-counter"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A simple pallet to increment a counter and emit an event."
license = "MIT-0"

[dependencies]
codec = {workspace = true, default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = {  default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
frame-benchmarking = {  default-features = false, workspace = true }
sp-runtime = {  default-features = false, workspace = true }
pallet-evm = { workspace = true  }
fp-evm = { workspace = true }
sp-core = {  workspace = true, default-features = false }
sp-io = {  workspace = true, default-features = false }
hex = {workspace = true, default-features = false, features = ["alloc"] }
sp-std = {  default-features = false,workspace = true }
hex-literal = {workspace = true}
log={workspace = true}
# secp256k1 = { version = "0.29.0", features = ["default", "serde"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "pallet-evm/std", 
]
