[package]
name = "pallet-counter"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true ,default-features = false}
frame-support.workspace = true
frame-support.default-features=false
frame-system.workspace = true
frame-system.default-features=false
pallet-evm={workspace = true}
fp-evm={workspace = true}
sp-std={workspace = true}
hex-literal = {workspace = true}
hex = { workspace = true, default-features = false, features = ["alloc"] }
log={workspace = true}
sp-core = { default-features = false, workspace = true}
sp-io = { default-features = false, workspace = true}
sp-runtime = { default-features = false, workspace = true}



[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-evm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
# try-runtime = [
# 	"frame-support/try-runtime",
# 	"frame-system/try-runtime",
# ]
